# nexus-platform

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  db.py  main.py  models.py
app/api/: bootstrap.py  commands.py  health.py  status.py  voice.py
app/services/: command_handlers.py  voice.py
docs/adr/: 001-agent-runtime.md  002-user-authentication.md  003-llm-router.md
migrations/: env.py
migrations/versions/: 20260713_0001_initial.py
tests/: conftest.py  test_bootstrap.py  test_command_handlers.py  test_voice.py
