[project]
name = "nexus-platform"
version = "0.7.0"
description = "Nexus OS Platform — data plane, one instance per tenant."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ironbat Digital LLC", email = "hello@ironbat.digital" }]
dependencies = [
  "nexus-core==0.7.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "asyncpg>=0.30",
  "psycopg[binary]>=3.2",
  "alembic>=1.14",
  "httpx>=0.28",
  "python-jose[cryptography]>=3.3",
  "pyotp>=2.9",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
llm-anthropic = ["anthropic>=0.42"]
llm-openai = ["openai>=1.58"]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.28",
  "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["app", "tests"]
extend-exclude = ["nexus-core", "vendor"]
